tests/invalid/undef_type.err_exp
undef_type.m:021: In declaration of predicate `q'/1:
undef_type.m:021:   error: undefined type `undef2'/0.
undef_type.m:024: In declaration of predicate `r'/1:
undef_type.m:024:   error: undefined type `io.state'/0.
undef_type.m:024:   (No module named `io' has been imported.)
